@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Switch installer to Module::Build::Tiny
 
 0.009     2015-06-05 20:04:26 EDT
   - For consistency with other reactors, POE can no longer be used to start or
